--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Austin's Portfolio</title>
     <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,600i,900,900i" rel="stylesheet">
     <script src="https://kit.fontawesome.com/bf188402ba.js" crossorigin="anonymous"></script>
   </head>
   <body>
